syntax = "proto3";

package api.notes.v1;

option go_package = "github.com/Egorpalan/grpc-easyp/pkg/api/notes/v1";

enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_NOTE_NOT_FOUND = 1;
  ERROR_CODE_INVALID_INPUT = 2;
  ERROR_CODE_INVALID_TEXT = 3;
}

message CustomError {
  ErrorCode code = 1;
  string reason = 2;
  string internal_error_code = 3;
}